--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -10,14 +10,15 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: #0d6efd;
   transition: 0.4s;
   padding: 3px;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: rgba(13, 110, 253, 0.1);
+    color: #0b5ed7;
   }
 }
 
